--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^7.0.3"
+    "gh-pages": "^6.3.0",
+    "vite": "^7.0.3",
+    "vite-plugin-pages": "^0.33.1"
   },
   "dependencies": {
     "highcharts": "^12.3.0"
